Fix bug about toolbox

--- a/index.html
+++ b/index.html
@@ -360,7 +360,9 @@
                     <div class="cta-content">
                         <div class="container pricing-container">
                             <h2 class="text-white display-1 lh-1 mb-4">Offre de lancement</h2>
-                            <img src="./assets/img/pricing.png" alt="" class="img-pricing">
+                            <div class="img-pricing">
+                                <img src="./assets/img/pricing.png" alt="" class="">
+                            </div>
                             <p class="text-white">Commandez dès maintenant votre Straw Berry et bénéficiez d'une réduction exclusive pour notre lancement. Ne manquez pas cette occasion de rejoindre la révolution de la téléphonie éco-responsable !</p>
                             <a class="btn btn-outline-light rounded-pill" href="#" target="_blank">Acheter</a>
 
